@@ -1,3 +1,9 @@
+.color-currentColor,
+.color-currentColor\:hover:hover,
+.anchor:hover .color-currentColor\:hover {
+  color: currentColor;
+}
+
 .color-inherit,
 .color-inherit\:hover:hover,
 .anchor:hover .color-inherit\:hover {
