@@ -1,6 +1,7 @@
 # 0.13.2 (2020-11-XX)
 
   * (background) add .bg-current
+  * (color) add .color-current
 
 # 0.13.1 (2020-11-09)
 
